--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app",
-  "version": "0.1.1",
+  "name": "mplsmallard",
+  "version": "0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,6 +13,8 @@
     "@mapbox/rehype-prism": "^0.6.0",
     "@svgr/webpack": "^5.5.0",
     "@types/js-yaml": "^4.0.1",
+    "@types/simple-oauth2": "^4.1.0",
+    "@vercel/node": "^1.11.0",
     "date-fns": "^2.22.1",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
@@ -25,7 +27,8 @@
     "react-schemaorg": "^1.3.3",
     "react-twitter-embed": "^3.0.3",
     "react-youtube": "^7.13.1",
-    "schema-dts": "^0.8.3"
+    "schema-dts": "^0.8.3",
+    "simple-oauth2": "^4.2.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
