--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-instagram-embed": "^2.0.0",
     "react-schemaorg": "^1.3.3",
     "react-twitter-embed": "^3.0.3",
+    "react-twitter-widgets": "^1.10.0",
     "react-youtube": "^7.13.1",
     "schema-dts": "^0.8.3"
   },
