--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app",
-  "version": "0.1.1",
+  "name": "mplsmallard.com",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.6.0",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@svgr/webpack": "^5.5.0",
     "@types/js-yaml": "^4.0.1",
     "date-fns": "^2.22.1",
@@ -20,11 +23,7 @@
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-instagram-embed": "^2.0.0",
-    "react-schemaorg": "^1.3.3",
-    "react-twitter-embed": "^3.0.3",
     "react-twitter-widgets": "^1.10.0",
-    "react-youtube": "^7.13.1",
     "schema-dts": "^0.8.3"
   },
   "devDependencies": {
